syntax = "proto3";

package admin.v1;

option go_package = "pkg/proto/adminv1;adminpb";

import "v1/admin_types.proto";
import "google/protobuf/timestamp.proto";

// RaftPeerInfo contains leader-side replication info for a Raft peer.
message RaftPeerInfo {
  // Peer node identifier.
  string node_id = 1;
  // Replication status from leader perspective.
  NodeStatus status = 2;
  // Highest log index known to be replicated on the peer.
  int64 match_index = 3;
  // Next log index the leader will try to send.
  int64 next_index = 4;
  // Replication lag in entries (best-effort).
  int64 lag = 5;
}

// RaftNodeInfo contains Raft-specific state for the node.
message RaftNodeInfo {
  // Current Raft term.
  int64 term = 1;
  // Current known leader node ID, if any.
  string leader_id = 2;
  // Highest committed log index.
  int64 commit_index = 3;
  // Highest log index applied to the state machine.
  int64 last_applied = 4;
  // Last local log index.
  int64 last_log_index = 5;
  // Term of the last local log entry.
  int64 last_log_term = 6;
  // Snapshot metadata: last included index.
  int64 snapshot_last_index = 7;
  // Snapshot metadata: last included term.
  int64 snapshot_last_term = 8;
  // Snapshot size in bytes (best-effort).
  int64 snapshot_size_bytes = 9;
  // Leader-side peer replication state (usually empty on followers).
  repeated RaftPeerInfo peers = 10;
  // Time when the last command/snapshot was applied to the state machine.
  google.protobuf.Timestamp last_applied_at = 11;
  // Active Raft cluster membership used for quorum calculation.
  repeated string cluster_members = 12;
  // Majority quorum size for the active cluster membership.
  int32 quorum_size = 13;
}
